# Chess-Engine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Chess-Engine  Makefile  cmake_install.cmake
include/: main.hpp
src/: main.cpp
